Setup WorkspaceCanvasView to use visibility instead of show/hide to toggle tabs. This prevents Flash from reloading. Caveat, now have to brute force position of footer.

--- a/source/scss/_workspace.scss
+++ b/source/scss/_workspace.scss
@@ -338,6 +338,12 @@
 	background-size: 60%;
 }
 
+// WorkspaceCanvasView element
+.workspace-canvas {
+	position: absolute;
+	width: 97%;
+}
+
 #test_module {
 	h2 {
 		@include font-size(24);
